samples/_failures_safe/1761315189_12071d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a36cbdb5.c: In function ‘main’:
./samples/SAFE/__tmp_a36cbdb5.c:162:9: error: expected declaration or statement at end of input
  162 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_a36cbdb5.c:162:9: error: expected declaration or statement at end of input
